# transparency-bot

./: .dockerignore  .gitattributes  Dockerfile  README.rst  pyproject.toml  requirements.txt  token.txt
.git-crypt/keys/default/0/: D0D58DE09EBC4CB609934365CC3BA3B993B6AF1D.gpg
.github/workflows/: main.yml
tests/: test_transparency_bot.py
transparency_bot/: __main__.py  bot.py  img.py
transparency_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
